--- a/Backend/User_Service/.env
+++ b/Backend/User_Service/.env
@@ -1,2 +1,7 @@
 MONGO_URI = "mongodb://localhost:27017/User-Service"
-PORT = 3000
+PORT = 3001
+
+
+# These variables are used to configure the connection to the RabbitMQ server
+RABBITMQ_URL=amqp://localhost
+USER_QUEUE=user.index
