containerization of authService

--- a/Backend/Search_Service/docker-compose.yml
+++ b/Backend/Search_Service/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     ports:
       - "5672:5672"
       - "15672:15672" # Management UI
+    hostname: rabbitmq
 
 volumes:
   meili_data:  # Define the named volume
