--- a/Backend/User_Service/.env
+++ b/Backend/User_Service/.env
@@ -3,5 +3,5 @@ PORT = 5001
 
 
 # These variables are used to configure the connection to the RabbitMQ server
-RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672  #RABBITMQ_URL=amqp://localhost
+RABBITMQ_URL=amqp://guest:guest@localhost:5672
 USER_QUEUE=user.index
