--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -53,7 +53,7 @@
     "input-otp": "^1.2.4",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.446.0",
-    "next": "13.5.1",
+    "next": "^15.3.1-canary.15",
     "next-themes": "^0.3.0",
     "postcss": "8.4.30",
     "react": "18.2.0",
