--- a/Backend/Search_Service/docker-compose.yml
+++ b/Backend/Search_Service/docker-compose.yml
@@ -9,6 +9,10 @@ services:
       - MEILI_MASTER_KEY=masterKey
     volumes:
       - meili_data:/meili_data  # Persistent volume
+    networks:
+      - shared-network
+
+      
 
   rabbitmq:
     image: rabbitmq:3-management
@@ -16,6 +20,31 @@ services:
       - "5672:5672"
       - "15672:15672" # Management UI
     hostname: rabbitmq
+    networks:
+      - shared-network
+
+  search-service:
+    build: .
+    ports:
+      - "5000:5000"
+    depends_on:
+      - meilisearch
+      - rabbitmq
+    environment:
+      - MEILI_HOST=http://meilisearch:7700
+      - MEILI_KEY=masterKey
+      - RABBITMQ_URL=amqp://rabbitmq:5672
+      - USER_QUEUE=user.index
+      - CONTACT_QUEUE=contact.index
+      - APP_QUEUE=application.index
+      - PORT=5000
+    restart: always
+    networks:
+      - shared-network
+
+networks:
+  shared-network:
+    external: true
 
 volumes:
   meili_data:  # Define the named volume
