adding interview service, contact service, file upload service

--- a/Backend/auth_service/src/main/resources/application.properties
+++ b/Backend/auth_service/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=jobtracker
 
 
-spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/auth
-# jdbc:postgresql://localhost:5432/auth
+#spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/auth
+ spring.datasource.url=jdbc:postgresql://localhost:5432/auth
 # Database connection properties
 spring.datasource.username=postgres
 spring.datasource.password=root
