--- a/Backend/contact_service/src/main/resources/application.properties
+++ b/Backend/contact_service/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=contact_service
+
+
+spring.data.mongodb.uri=mongodb://localhost:27017/ContactService
+#spring.data.mongodb.username=yourUser    # (optional, if using auth)
+#spring.data.mongodb.password=yourPassword # (optional, if using auth)
