--- a/Backend/interview_service/src/main/resources/application.properties
+++ b/Backend/interview_service/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=interview_service
+
+spring.data.mongodb.uri=mongodb://localhost:27017/InterviewService
+#spring.data.mongodb.username=yourUser    # (optional, if using auth)
+#spring.data.mongodb.password=yourPassword # (optional, if using auth)
