registering the services in consul and kong

--- a/Backend/application_service/requirements.txt
+++ b/Backend/application_service/requirements.txt
@@ -4,5 +4,6 @@ mongoengine
 django-rest-framework-mongoengine
 djangorestframework-simplejwt[crypto]
 requests
+python-decouple
 
 #  python -m pip install -r .\requirements.txt
