--- a/Backend/dashboard_service/package.json
+++ b/Backend/dashboard_service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "user_service",
+  "name": "dashboard_service",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -7,7 +7,6 @@
     "start": "node ./src/index.js",
     "dev": "nodemon ./src/index.js"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
