--- a/Backend/fileUpload_service/package.json
+++ b/Backend/fileUpload_service/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "consul": "^2.0.1",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "multer": "^1.4.5-lts.2"
   }
