--- a/Backend/search_service/package.json
+++ b/Backend/search_service/package.json
@@ -1,10 +1,10 @@
 {
   "name": "search_service",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "node ./src/index.js",
+    "dev": "nodemon ./src/index.js",
     "mock": "node publisher.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,6 +14,7 @@
   "dependencies": {
     "amqplib": "^0.10.3",
     "axios": "^1.8.4",
+    "consul": "^2.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
