configuring rabbitMq for interview, application, analitics and dashboard services

--- a/Backend/application_service/requirements.txt
+++ b/Backend/application_service/requirements.txt
@@ -5,5 +5,7 @@ django-rest-framework-mongoengine
 djangorestframework-simplejwt[crypto]
 requests
 python-decouple
+pika
+
 
 #  python -m pip install -r .\requirements.txt
