--- a/Backend/interview_service/src/main/resources/application.properties
+++ b/Backend/interview_service/src/main/resources/application.properties
@@ -3,3 +3,12 @@ spring.application.name=interview_service
 spring.data.mongodb.uri=mongodb://localhost:27017/InterviewService
 #spring.data.mongodb.username=yourUser    # (optional, if using auth)
 #spring.data.mongodb.password=yourPassword # (optional, if using auth)
+
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+jobtracker.rabbitmq.exchange=jobtracker.exchange
+jobtracker.rabbitmq.routingkey.interview.created=interview.created
+jobtracker.rabbitmq.routingkey.interview.updated=interview.updated
