finishing the queue set up contact, interview, application services

--- a/Backend/contact_service/src/main/resources/application.yml
+++ b/Backend/contact_service/src/main/resources/application.yml
@@ -5,6 +5,10 @@ server:
 spring:
   application:
     name: contact-service
+
+  rabbitmq:
+    contact-queue: contact.index
+
   cloud:
     consul:
       host: localhost
