--- a/Backend/interview_service/src/main/resources/application.yml
+++ b/Backend/interview_service/src/main/resources/application.yml
@@ -5,6 +5,10 @@ server:
 spring:
   application:
     name: interview-service
+
+  rabbitmq:
+    interview-queue: interview.index
+
   cloud:
     consul:
       host: localhost
