--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,9 @@ logs/
 *.log.*
 
 # Environment variables
-.env
-.env.local
-.env.*.local
+#.env
+#.env.local
+#.env.*.local
 
 # Build output
 dist/
