--- a/Backend/user_service/Dockerfile
+++ b/Backend/user_service/Dockerfile
@@ -24,5 +24,8 @@ COPY --from=builder /app /app
 # Expose the desired port
 EXPOSE 5001
 
+# Use a non-root user
+USER node
+
 # Use exec form and specify the default command
 CMD ["npm", "start"]
