--- a/Kong/kong.yml
+++ b/Kong/kong.yml
@@ -1,4 +1,21 @@
 _format_version: "1.1"
+plugins:
+  - name: cors
+    config:
+      origins:
+        - http://localhost:3000
+      methods:
+        - GET
+        - POST
+        - PUT
+        - DELETE
+        - OPTIONS
+      headers:
+        - Accept
+        - Authorization
+        - Content-Type
+      credentials: true
+
 services:
   - name: auth-service
     url: http://host.docker.internal:5000  # http://auth_service.service.consul:5000
