--- a/Backend/interview_service/src/main/resources/application.properties
+++ b/Backend/interview_service/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 spring.application.name=interview_service
 
-spring.data.mongodb.uri=mongodb://localhost:27017/InterviewService
-#spring.data.mongodb.username=yourUser    # (optional, if using auth)
-#spring.data.mongodb.password=yourPassword # (optional, if using auth)
+spring.data.mongodb.uri=mongodb://oumeri:PantryScanner2024@mongo:27017/InterviewService?authSource=admin
+spring.data.mongodb.username=oumeri   
+spring.data.mongodb.password=PantryScanner2024
 
-
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
