--- a/Backend/interview_service/src/main/resources/application.yml
+++ b/Backend/interview_service/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 server:
   port: 5003
+  address: 0.0.0.0
 
 
 spring:
@@ -11,7 +12,7 @@ spring:
 
   cloud:
     consul:
-      host: localhost
+      host: consul
       port: 8500
       discovery:
         hostname: host.docker.internal
