Created and tested the interview image and docker compose

--- a/Backend/contact_service/src/main/resources/application.properties
+++ b/Backend/contact_service/src/main/resources/application.properties
@@ -1,6 +1,14 @@
 spring.application.name=contact_service
 
 
-spring.data.mongodb.uri=mongodb://localhost:27017/ContactService
-#spring.data.mongodb.username=yourUser    # (optional, if using auth)
-#spring.data.mongodb.password=yourPassword # (optional, if using auth)
+spring.data.mongodb.uri=mongodb://oumeri:PantryScanner2024@mongo:27017/ContactService?authSource=admin
+spring.data.mongodb.username=oumeri
+spring.data.mongodb.password=PantryScanner2024
+
+spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+jobtracker.rabbitmq.exchange=jobtracker.exchange
+jobtracker.rabbitmq.routingkey.interview.created=contact.created
+jobtracker.rabbitmq.routingkey.interview.updated=contact.updated
