--- a/Backend/auth_service/src/main/resources/application.yml
+++ b/Backend/auth_service/src/main/resources/application.yml
@@ -24,7 +24,7 @@ spring:
       host: consul # The name of the Consul service in Docker Compose
       port: 8500
       discovery:
-        hostname: 10.5.18.49 # host.docker.internal
+        hostname: auth-service 
         port: ${server.port}
         register: true
         health-check-path: /health
