--- a/Backend/contact_service/src/main/resources/application.properties
+++ b/Backend/contact_service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=contact_service
 
 
-spring.data.mongodb.uri=mongodb://oumeri:PantryScanner2024@mongo:27017/ContactService?authSource=admin
+spring.data.mongodb.uri=mongodb://oumeri:PantryScanner2024@contact-db:27017/Contacts?authSource=admin
 spring.data.mongodb.username=oumeri
 spring.data.mongodb.password=PantryScanner2024
 
