--- a/Backend/contact_service/src/main/resources/application.yml
+++ b/Backend/contact_service/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
       host: consul
       port: 8500
       discovery:
-        hostname: host.docker.internal
+        hostname: contact-service
         port: ${server.port}
         register: true
         health-check-path: /health
