--- a/Backend/interview_service/src/main/resources/application.properties
+++ b/Backend/interview_service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=interview_service
 
-spring.data.mongodb.uri=mongodb://oumeri:PantryScanner2024@mongo:27017/InterviewService?authSource=admin
+spring.data.mongodb.uri=mongodb://oumeri:PantryScanner2024@interview-db:27017/Interviews?authSource=admin
 spring.data.mongodb.username=oumeri   
 spring.data.mongodb.password=PantryScanner2024
 
