Fixed the .env, application.properties and application.yml files to run locally

--- a/Backend/auth_service/src/main/resources/application.properties
+++ b/Backend/auth_service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=jobtracker
 
 
 #spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/auth
-spring.datasource.url=jdbc:postgresql://auth-db:5432/authdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/authdb
 # Database connection properties
 spring.datasource.username=postgres
 spring.datasource.password=root
