--- a/Backend/contact_service/src/main/resources/application.properties
+++ b/Backend/contact_service/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=contact_service
 
 
-spring.data.mongodb.uri=mongodb://oumeri:PantryScanner2024@contact-db:27017/Contacts?authSource=admin
+spring.data.mongodb.uri=mongodb://oumeri:PantryScanner2024@localhost:27017/Contacts?authSource=admin
 spring.data.mongodb.username=oumeri
 spring.data.mongodb.password=PantryScanner2024
 
-spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
