--- a/Backend/interview_service/src/main/resources/application.properties
+++ b/Backend/interview_service/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=interview_service
 
-spring.data.mongodb.uri=mongodb://oumeri:PantryScanner2024@interview-db:27017/Interviews?authSource=admin
+spring.data.mongodb.uri=mongodb://oumeri:PantryScanner2024@localhost:27017/Interviews?authSource=admin
 spring.data.mongodb.username=oumeri   
 spring.data.mongodb.password=PantryScanner2024
 
-spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
