--- a/Backend/search_service/.env
+++ b/Backend/search_service/.env
@@ -1,10 +1,10 @@
 # Environment variables for the search service
 # These variables are used to configure the connection to the MeiliSearch server
-MEILI_HOST=http://meilisearch:7700
+MEILI_HOST=http://localhost:7700
 MEILI_KEY=masterKey
 
 # These variables are used to configure the connection to the RabbitMQ server
-RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672
+RABBITMQ_URL=amqp://guest:guest@localhost:5672
 RABBITMQ_EXCHANGE=jobtracker.exchange
 RABBITMQ_EXCHANGE_TYPE=topic
 USER_QUEUE=user.index
@@ -16,8 +16,8 @@ PORT=5009
 
 # These variables are used to configure the connection to the Consul server
 
-SERVICE_HOST= search-service
-CONSUL_HOST=consul
+SERVICE_HOST= localhost
+CONSUL_HOST=localhost
 CONSUL_PORT=8500
 SERVICE_ID=search-service
 SERVICE_NAME=search-service
