--- a/Backend/user_service/.env
+++ b/Backend/user_service/.env
@@ -1,14 +1,14 @@
-MONGO_URI = "mongodb://oumeri:PantryScanner2024@mongo:27017/Users?authSource=admin"
+MONGO_URI = "mongodb://oumeri:PantryScanner2024@localhost:27017/Users?authSource=admin"
 PORT = 5001
 
 
 # These variables are used to configure the connection to the RabbitMQ server
-RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672
+RABBITMQ_URL=amqp://guest:guest@localhost:5672
 USER_QUEUE=user.index
 
 # These variables are used to configure the connection to the consul server
-SERVICE_HOST= user-service
-CONSUL_HOST=consul
+SERVICE_HOST= localhost
+CONSUL_HOST=localhost
 CONSUL_PORT=8500
 SERVICE_ID=user-service
 SERVICE_NAME=user-service
