--- a/Backend/dashboard_service/.env
+++ b/Backend/dashboard_service/.env
@@ -1,7 +1,7 @@
 PORT=5006
 
 # This consul agent is used to register the service
-SERVICE_HOST=host.docker.internal
+SERVICE_HOST=10.5.18.49 #host.docker.internal
 CONSUL_HOST=localhost
 CONSUL_PORT=8500
 SERVICE_ID=dashboard_service
