--- a/Backend/user_service/.env
+++ b/Backend/user_service/.env
@@ -1,4 +1,4 @@
-MONGO_URI = "mongodb://oumeri:PantryScanner2024@localhost:27017/Users?authSource=admin"
+MONGO_URI = "mongodb://localhost:27017/Users?authSource=admin"
 PORT = 5001
 
 
@@ -7,7 +7,7 @@ RABBITMQ_URL=amqp://guest:guest@localhost:5672
 USER_QUEUE=user.index
 
 # These variables are used to configure the connection to the consul server
-SERVICE_HOST= localhost
+SERVICE_HOST= 10.5.18.49 #host.docker.internal
 CONSUL_HOST=localhost
 CONSUL_PORT=8500
 SERVICE_ID=user-service
