--- a/Backend/analytics_service/.env
+++ b/Backend/analytics_service/.env
@@ -1,7 +1,7 @@
 PORT=5005
 
 # These variables are used to configure the connection to the consul server
-SERVICE_HOST=host.docker.internal
+SERVICE_HOST=10.5.18.49 #host.docker.internal
 CONSUL_HOST=localhost
 CONSUL_PORT=8500
 SERVICE_ID=analytics_service
