--- a/Backend/application_service/.env
+++ b/Backend/application_service/.env
@@ -7,7 +7,7 @@ MONGO_HOST=localhost
 MONGO_PORT=27017
 
 # consul configuration
-SERVICE_HOST=host.docker.internal
+SERVICE_HOST=10.5.18.49 #host.docker.internal
 CONSUL_HOST=localhost
 CONSUL_PORT=8500
 SERVICE_ID=application_service
