--- a/Backend/auth_service/src/main/resources/application.yml
+++ b/Backend/auth_service/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080 
+  port: 5000
   # To make it accessible from outside the container
   # address: 0.0.0.0 
 
@@ -17,14 +17,13 @@ spring:
   services:
     profile-service:
       name: user-service
-      url: http://${spring.services.profile-service.name}/users/profile/
 
   cloud:
     consul:
       host: localhost
       port: 8500
       discovery:
-        hostname: localhost 
+        hostname: 10.5.18.49 #host.docker.internal
         port: ${server.port}
         register: true
         health-check-path: /health
