--- a/Backend/fileUpload_service/.env
+++ b/Backend/fileUpload_service/.env
@@ -1,6 +1,6 @@
 PORT=5007
 
-SERVICE_HOST=host.docker.internal
+SERVICE_HOST=10.5.18.49 #host.docker.internal
 CONSUL_HOST=localhost
 CONSUL_PORT=8500
 SERVICE_ID=fileUpload_service
