linking analytics to frontend part 1

--- a/Backend/analytics_service/.env
+++ b/Backend/analytics_service/.env
@@ -1,12 +1,14 @@
 PORT=5005
 
 # These variables are used to configure the connection to the consul server
-SERVICE_HOST=10.5.18.49 #host.docker.internal
+SERVICE_HOST=10.1.1.191 #host.docker.internal
 CONSUL_HOST=localhost
 CONSUL_PORT=8500
-SERVICE_ID=analytics_service
-SERVICE_NAME=analytics_service
+SERVICE_ID=analytics-service
+SERVICE_NAME=analytics-service
 
+# db
+MONGODB_URI='mongodb://localhost:27017/Analytics'
 
 # These variables are used to configure the connection to the RabbitMQ server
 RABBITMQ_URL=amqp://guest:guest@localhost:5672
