finishing the link btw front and analytics

--- a/Backend/analytics_service/.env
+++ b/Backend/analytics_service/.env
@@ -6,6 +6,8 @@ CONSUL_HOST=localhost
 CONSUL_PORT=8500
 SERVICE_ID=analytics-service
 SERVICE_NAME=analytics-service
+APPLICATION_SERVICE=application-service
+INTERVIEW_SERVICE=interview-service
 
 # db
 MONGODB_URI='mongodb://localhost:27017/Analytics'
