Added the Container config files. Removed spring config files from gitignore

--- a/Backend/auth_service/.gitignore
+++ b/Backend/auth_service/.gitignore
@@ -14,8 +14,8 @@ target/
 .sts4-cache
 
 # Spring config files (ignore everywhere)
-**/application.yml
-**/application.properties
+# **/application.yml
+# **/application.properties
 
 
 ### IntelliJ IDEA ###
